k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stephaniegiorgis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  tls:
    - hosts:
        - stephaniegiorgis.ch
        - www.stephaniegiorgis.ch
      secretName: stephaniegiorgis-tls
  rules:
    - host: www.stephaniegiorgis.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stephaniegiorgis
                port:
                  number: 3000
